--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
-}
+/* loin ui start */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.uy{
   display: flex;
-  flex-direction: column;
+  align-items: center !important;
+  justify-content: center !important;
+  
+  height: 100vh;
+  opacity: 0.8;
+
+}
+.po{
+  font-size: 20px;
+  padding-top: 40px !important;
+}
+
+
+.ff{
+  width: 90px;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: rgb(11, 193, 248);
+  color: black;
+  opacity: 0.7;
+}
+.ju{
+  box-shadow: rgb(239, 245, 246) 3px 3px 30px 3px;
+  
+  border-radius: 10px;
+  border-color: rgb(2, 43, 63);
+  background-color: rgb(255, 255, 255);
+  
+}
+.f{
+  padding-top: 10px;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
+/* loin ui end */
